-
Bug
-
Resolution: Fixed
-
Major
-
None
-
9223372036854775807
I've noticed in various places in debug logs that the client UUID is being truncated.
[ 5934.778609] Lustre: MGS: Connection restored to aafbfe59-7811-4 (at 10.9.6.193@tcp)
This turns out to be a problem wherever the UUID is shown:
# lctl get_param -n llite.*.uuid 595f3c6a-20ae-4 # lctl get_param -n mdc.*.uuid 595f3c6a-20ae-4
Initially I thought something was wrong with the "safe" string handling in obd_uuid2str(), but it turns out that there is a bug when the client UUID is originally generated in ll_fill_super() because of the use of UUID_SIZE, which is actually the size of the binary uuid_t instead of the ASCII UUID (stored in struct obd_uuid) that is passed between nodes and printed to the logs.